Fix recording of Effective connection type (ECT) in system profile proto

ECT may not be recorded in certain cases where metrics service gets
initialized before the IO thread is initialized. In that case, posting
tasks to the IO thread fails.

This CL fixes the issue by waiting for the IO thread to be initialized
before posting tasks to it.

Bug: 755314
Change-Id: I37e1c1362bb76e8d2b47ec7bb408d0282287d532
Reviewed-on: https://chromium-review.googlesource.com/614775
Reviewed-by: Alexei Svitkine (very slow) <asvitkine@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494917}
Former-commit-id: 7e299f59fcbd38ba654c71b742e4c3616dda7463