components/metrics/net/network_metrics_provider.cc
@@ -30,20 +30,6 @@
 
 namespace metrics {
 
-namespace {
-
-// Gets the network quality estimator from |network_quality_estimator_provider|,
-// and provides it to the |callback|.
-void GetAndSetNetworkQualityEstimator(
-    const base::Callback<void(net::NetworkQualityEstimator*)>& callback,
-    NetworkMetricsProvider::NetworkQualityEstimatorProvider*
-        network_quality_estimator_provider) {
-  callback.Run(
-      network_quality_estimator_provider->GetNetworkQualityEstimator());
-}
-
-}  // namespace
-
 SystemProfileProto::Network::EffectiveConnectionType
 ConvertEffectiveConnectionType(
     net::EffectiveConnectionType effective_connection_type) {
@@ -144,9 +130,6 @@ NetworkMetricsProvider::NetworkMetricsProvider(
   ProbeWifiPHYLayerProtocol();
 
   if (network_quality_estimator_provider_) {
-    network_quality_task_runner_ =
-        network_quality_estimator_provider_->GetTaskRunner();
-    DCHECK(network_quality_task_runner_);
     effective_connection_type_observer_.reset(
         new EffectiveConnectionTypeObserver(
             base::Bind(
@@ -158,31 +141,35 @@ NetworkMetricsProvider::NetworkMetricsProvider(
     // |effective_connection_type_observer_| on the same task runner on  which
     // the network quality estimator lives. It is safe to use base::Unretained
     // here since both |network_quality_estimator_provider_| and
-    // |effective_connection_type_observer_| are owned by |this|, and are
-    // deleted on the |network_quality_task_runner_|.
-    network_quality_task_runner_->PostTask(
-        FROM_HERE,
-        base::Bind(&GetAndSetNetworkQualityEstimator,
-                   base::Bind(&EffectiveConnectionTypeObserver::Init,
-                              base::Unretained(
-                                  effective_connection_type_observer_.get())),
-                   network_quality_estimator_provider_.get()));
+    // |effective_connection_type_observer_| are owned by |this|, and
+    // |network_quality_estimator_provider_| is deleted before
+    // |effective_connection_type_observer_|.
+    network_quality_estimator_provider_->PostReplyNetworkQualityEstimator(
+        base::Bind(
+            &EffectiveConnectionTypeObserver::Init,
+            base::Unretained(effective_connection_type_observer_.get())));
   }
 }
 
 NetworkMetricsProvider::~NetworkMetricsProvider() {
   DCHECK(thread_checker_.CalledOnValidThread());
   net::NetworkChangeNotifier::RemoveConnectionTypeObserver(this);
-  if (effective_connection_type_observer_ &&
-      !network_quality_task_runner_->DeleteSoon(
-          FROM_HERE, effective_connection_type_observer_.release())) {
-    NOTREACHED() << " ECT observer was not deleted successfully";
-  }
-  if (network_quality_estimator_provider_ &&
-      !network_quality_task_runner_->DeleteSoon(
-          FROM_HERE, network_quality_estimator_provider_.release())) {
-    NOTREACHED()
-        << " Network quality estimate provider was not deleted successfully";
+
+  if (network_quality_estimator_provider_) {
+    scoped_refptr<base::SequencedTaskRunner> network_quality_task_runner =
+        network_quality_estimator_provider_->GetTaskRunner();
+
+    // |network_quality_estimator_provider_| must be deleted before
+    // |effective_connection_type_observer_| since
+    // |effective_connection_type_observer_| may callback into
+    // |effective_connection_type_observer_|.
+    network_quality_estimator_provider_.reset();
+
+    if (network_quality_task_runner &&
+        !network_quality_task_runner->DeleteSoon(
+            FROM_HERE, effective_connection_type_observer_.release())) {
+      NOTREACHED() << " ECT observer was not deleted successfully";
+    }
   }
 }
 
